@@ -1,60 +1,67 @@
-/* @group news listing */
-.newsListing {
+/* @group news listing + newslistingblock listing */
+.newsListing, .ftw-news-newslistingblock .newsListing {
   list-style: none;
   padding-left: 0;
   margin: 0;
 }
 
-.newsListing .image {
+.newsListing .image, .ftw-news-newslistingblock .newsListing .image {
   float: right;
   margin-left: 1em;
 }
 
-.newsListing .tileItem {
+.newsListing .tileItem, .ftw-news-newslistingblock .newsListing .tileItem {
   border-bottom: 1px solid #b7b5b4;
   margin-bottom: 1em;
 }
 
-.newsListing .tileItem .tileHeadline {
+.newsListing .tileItem .tileHeadline, .newsListing .tileItem .newsHeadline,
+.ftw-news-newslistingblock .newsListing .tileItem .tileHeadline,
+.ftw-news-newslistingblock .newsListing .tileItem .newsHeadline {
   font-size: 24px;
 }
-/* @end news listing */
-
+/* @end news listing + newslistingblock listing */
 
 /* @group archive portlet */
+
 .portletArchiveListing .highlight a {
   font-weight: bold;
 }
+
 .portletArchiveListing li.year {
   cursor: pointer;
 }
+
 .portletArchiveListing li {
   display: block;
   margin-bottom: 2px;
 }
+
 .portletArchiveListing ul.months {
   display: none;
   margin-bottom: 10px;
   margin-top: 5px;
 }
+
 .portletArchiveListing li.month {
   padding-left: 2em;
 }
+
 .portletArchiveListing li.year span.yearnumber:before {
   content: '►';
   padding-right: 5px;
 }
+
 .portletArchiveListing li.year.expanded span.yearnumber:before {
   content: '▼';
 }
+
 .portletArchiveListing ul.years ul.expanded {
   display: block;
 }
 /* @end archive portlet */
 
-
-/* @group news portlet */
-
+/* @group news listing portlet */
 .portlet.newsTemplate ul {
   list-style: none;
   padding-left: 0;
@@ -80,4 +87,4 @@
   height: auto;
 }
 
-/* @end group news portlet*/
+/* @end news listing portlet */
