@@ -16,44 +16,46 @@
 
     <tal:news tal:define="news view/get_news;">
 
-        <div class="newsListing">
+        <p tal:condition="not: news"
+           i18n:translate="">No content available</p>
 
-            <p tal:condition="not: news"
-               i18n:translate="">No content available</p>
+        <ul class="newsListing">
 
-            <div class="newsItem" tal:condition="news" tal:repeat="item news">
+            <tal:loop repeat="item news">
+                <li class="tileItem">
+                    <div class="newsHeadline">
+                        <a tal:attributes="href item/url"
+                           tal:content="item/title">Link</a>
+                    </div>
+                    <div class="documentByLine">
+                        <span tal:condition="item/news_date"
+                              tal:content="item/news_date"/>
+                        <tal:author condition="item/author">
+                            <span i18n:translate="news_listing_author_label">
+                                by
+                                <span tal:content="item/author"
+                                      i18n:name="author">Author</span>
+                            </span>
+                        </tal:author>
+                    </div>
 
-                <div tal:condition="item/image_tag"
-                     tal:content="structure item/image_tag"
-                     class="image">
-                </div>
+                    <div tal:condition="item/image_tag"
+                         tal:content="structure item/image_tag"
+                         class="image">
+                    </div>
 
-                <div class="newsHeadline">
-                    <a tal:attributes="href item/url"
-                       tal:content="item/title">Link</a>
-                </div>
-                <div class="documentByLine">
-                    <span tal:condition="item/news_date"
-                          tal:content="item/news_date"/>
-                    <tal:author condition="item/author">
-                        <span i18n:translate="news_listing_author_label">
-                            by
-                            <span tal:content="item/author"
-                                  i18n:name="author">Author</span>
-                        </span>
-                    </tal:author>
-                </div>
-                <p class="newsbody" tal:condition="item/description">
-                    <span class="description"
-                          tal:content="item/description">Description</span>
-                </p>
-                <p class="newsFooter" tal:condition="item/url">
-                    <a tal:attributes="href item/url"
-                       i18n:translate="">Read more</a>
-                </p>
-            </div>
+                    <p class="newsbody" tal:condition="item/description">
+                        <span class="description"
+                              tal:content="item/description">Description</span>
+                    </p>
+                    <p class="newsFooter" tal:condition="item/url">
+                        <a tal:attributes="href item/url"
+                           i18n:translate="">Read more</a>
+                    </p>
+                    <div class="visualClear"><!-- --></div>
+            </tal:loop>
 
-        </div>
+        </ul>
 
         <p tal:define="more_news_link_url block_info/more_news_link_url;
                        more_news_link_label block_info/more_news_link_label"
